New project URL

--- a/indextemplate2.html
+++ b/indextemplate2.html
@@ -34,7 +34,7 @@
     </DIV>
 
     <P class="small">created with
-       <A href="http://igal.trexler.at/">igal2 <!--#IGAL-VERSION#--></A></P>
+       <A href="https://github.com/solbu/igal2">igal2 <!--#IGAL-VERSION#--></A></P>
 
   </BODY>
 </HTML>
